src/objects/Socket_Automation__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Automation__c</fullName>
        <label>Date of Automation</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineer Assigned</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Engineer,SE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Socket_Automations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Sockets_Automated__c</fullName>
        <label>Number of Sockets Automated</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Socket Automations</relationshipLabel>
        <relationshipName>Socket_Automations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Presales_Automation__c</fullName>
        <formula>IF(Date_of_Automation__c&gt;Opportunity__r.CloseDate,FALSE,TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presales Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Socket_Automation_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Socket Automation Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Sockets_Automated__c</fullName>
        <label>Type of Sockets Automated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Host</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Socket Automation</label>
    <nameField>
        <label>Automation Notes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Socket Automations</pluralLabel>
    <recordTypes>
        <fullName>Socket_Automation</fullName>
        <active>true</active>
        <label>Socket Automation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>